@@ -3503,21 +3503,38 @@ again:
              *
              *          For this reason, this code never uses the data pointer, it requires an offset relative to TempLine to avoid this
              *          weird flaw. */
-            if (video_debug_overlay && vga.draw.width < render.src.width) {
-                if (data >= TempLine && data < (TempLine+(64*4))) {
-                    VGA_DrawDebugLine(TempLine+size_t(data-TempLine)+(vga.draw.width*((vga.draw.bpp+7u)>>3u)),render.src.width-vga.draw.width);
+
+            /* NTS: SVGA modes M_LIN15/16/24/32 DrawLine(), if not rendering the hardware cursor, often point directly at video RAM!
+             *      Rendering past it will just corrupt video RAM! Make a copy if any such overlays will occur! */
+            bool renderOK = true;
+
+            if (!(data >= TempLine && data < (TempLine+(64*4)))) {
+                renderOK = false;
+
+                if (video_debug_overlay || vga_page_flip_occurred || vga_3da_polled) {
+                   memcpy(TempLine,data,vga.draw.width*((vga.draw.bpp+7u)>>3u));
+                   data = TempLine;
+                   renderOK = true;
                 }
-	    }
-            if (vga_page_flip_occurred) {
-                memxor(data,0xFF,vga.draw.width*(vga.draw.bpp>>3));
-                vga_page_flip_occurred = false;
             }
-            if (vga_3da_polled) {
-                if (vga.draw.bpp==32)
-                    memxor_greendotted_32bpp((uint32_t*)data,(vga.draw.width>>1)*(vga.draw.bpp>>3),vga.draw.lines_done);
-                else
-                    memxor_greendotted_16bpp((uint16_t*)data,(vga.draw.width>>1)*(vga.draw.bpp>>3),vga.draw.lines_done);
-                vga_3da_polled = false;
+
+            if (renderOK) {
+                if (video_debug_overlay && vga.draw.width < render.src.width)
+                    VGA_DrawDebugLine(TempLine+size_t(data-TempLine)+(vga.draw.width*((vga.draw.bpp+7u)>>3u)),render.src.width-vga.draw.width);
+
+                if (vga_page_flip_occurred) {
+                    memxor(data,0xFF,vga.draw.width*(vga.draw.bpp>>3));
+                    vga_page_flip_occurred = false;
+                }
+
+                if (vga_3da_polled) {
+                    if (vga.draw.bpp==32)
+                        memxor_greendotted_32bpp((uint32_t*)data,(vga.draw.width>>1)*(vga.draw.bpp>>3),vga.draw.lines_done);
+                    else
+                        memxor_greendotted_16bpp((uint16_t*)data,(vga.draw.width>>1)*(vga.draw.bpp>>3),vga.draw.lines_done);
+
+                    vga_3da_polled = false;
+                }
             }
 
             if (VGA_IsCaptureEnabled())
@@ -4291,16 +4308,18 @@ void VGA_DrawDebugLine(uint8_t *line,unsigned int w) {
 				}
 			}
 
-			if (dw <= 16) return;
-			for (unsigned int c=0;c < 16;c++) {
-				const unsigned int idx = vga.dac.combine[c]; /* vga_dac.cpp considers color select */
-				const unsigned int color = SDL_MapRGB(
-					sdl.surface->format,
-					((vga.dac.rgb[idx].red << dacshift) & 0xFF),
-					((vga.dac.rgb[idx].green << dacshift) & 0xFF),
-					((vga.dac.rgb[idx].blue << dacshift) & 0xFF));
-				*draw++ = color;
-				dw--;
+			if (!(vga.mode == M_LIN15 || vga.mode == M_LIN16 || vga.mode == M_LIN24 || vga.mode == M_LIN32)) {
+				if (dw <= 16) return;
+				for (unsigned int c=0;c < 16;c++) {
+					const unsigned int idx = vga.dac.combine[c]; /* vga_dac.cpp considers color select */
+					const unsigned int color = SDL_MapRGB(
+							sdl.surface->format,
+							((vga.dac.rgb[idx].red << dacshift) & 0xFF),
+							((vga.dac.rgb[idx].green << dacshift) & 0xFF),
+							((vga.dac.rgb[idx].blue << dacshift) & 0xFF));
+					*draw++ = color;
+					dw--;
+				}
 			}
 
 			if (dw <= 4) return;
